@@ -157,6 +157,25 @@ int webauth_keyring_best_key(struct webauth_context *,
     __attribute__((__nonnull__));
 
 /*
+ * Decode a keyring from the serialization format used for storing it in a
+ * file or generated by webauth_keyring_encode, storing the result in the
+ * webauth_keyring argument.  Returns a WebAuth status code.
+ */
+int webauth_keyring_decode(struct webauth_context *, const char *, size_t,
+                           struct webauth_keyring **)
+    __attribute__((__nonnull__));
+
+/*
+ * Encode a keyring in the serialization format used for storing it in a file
+ * or decodable by webauth_keyring_decode, storing the result in the provided
+ * char ** argument and the size of the resulting encoded keyring in the
+ * size_t * argument.  Returns a WebAuth status code.
+ */
+int webauth_keyring_encode(struct webauth_context *,
+                           const struct webauth_keyring *, char **, size_t *)
+    __attribute__((__nonnull__));
+
+/*
  * Reads a keyring from a file in encoded form and stores the newly-allocated
  * keyring in the provided argument.  Returns a WebAuth status code, which may
  * be WA_ERR_KEYRING_OPENREAD, WA_ERR_KEYRING_READ, WA_ERR_CORRUPT, or
